# projecteuler

./: .gitignore  LICENSE  README.md  clear.bat  erl_make.bat  test.bat  test.config
common/: Emakefile  erl_make.bat
common/include/: grid_def.hrl  pandigital_def.hrl  primes_def.hrl
common/src/: collections.erl  compare.erl  control.erl  eratos_sieve.erl  grid.erl  grid_helper.erl  grid_path_searcher.erl  load_utils.erl  mutable_array.erl  mutable_uint8_array.erl  number_dividers.erl  numbers.erl  numerical_task_behaviour.erl  pandigital_numbers.erl  partition.erl  pell_equation.erl  permutations.erl  rational.erl  string_utils.erl
common_tests/: Emakefile  erl_make.bat
common_tests/src/: collections_tests.erl  control_tests.erl  eratos_sieve_tests.erl  grid_helper_tests.erl  grid_path_searcher_tests.erl  grid_tests.erl  load_utils_tests.erl  mutable_array_tests.erl  mutable_uint8_array_tests.erl  number_dividers_tests.erl  numbers_tests.erl  pandigital_numbers_tests.erl  partition_tests.erl  pell_equation_tests.erl  permutations_tests.erl  rational_tests.erl  string_utils_tests.erl
nif/: CMakeLists.txt  make.bat
nif/mutable_array/: CMakeLists.txt  MutableArrayNif.cpp  stdafx.cpp
nif/mutable_uint8_array/: CMakeLists.txt  MutableUInt8ArrayNif.cpp
numerical_task/: Emakefile  erl_make.bat
numerical_task/include/: numerical_task_executor.hrl
project_euler/: .erlang  Emakefile  erl_make.bat
projecteuler.erlang/: clear.bat
projecteuler.erlang/nif/mutable_uint8_array/: CMakeLists.txt  dllmain.cpp
projecteuler.fsharp/: projecteuler.fsharp.sln
(+727 files in other folders)
